--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -71,6 +71,12 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground text-slate-800 font-roboto;
+  }
+}
+
+@layer components {
+  .container {
+    @apply px-2 max-w-7xl mx-auto;
   }
 }
